reduce full rebuilds when using CLI/VSC watch Fixes #86

--- a/StaticWebAppsDemo/.vscode/launch.json
+++ b/StaticWebAppsDemo/.vscode/launch.json
@@ -41,9 +41,7 @@
       "preLaunchTask": "dotnet build & watch tailwind",
       "postDebugTask": "stop watching",
       "args": [
-        "watch",
-        "run",
-        "-- -p:TailwindBuild=false"
+        "watch"
       ],
       "cwd": "${workspaceFolder}/BlazorWasm",
       "presentation": {
