pre-pack-restore pls [skip ci]

--- a/.github/workflows/github-packages.yml
+++ b/.github/workflows/github-packages.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Pack
         run: |
-          # dotnet restore
+          dotnet restore
           dotnet pack ./Template.csproj --no-build --output ./
 
       - name: Push
