--- a/Source/package.json
+++ b/Source/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "postcss-import": "^14.0.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.0-alpha.2",
+    "tailwindcss": "^3.0.0",
     "tailwindcss-debug-screens": "^2.2.0"
   },
   "scripts": {
