--- a/Source/TailBlazor.csproj
+++ b/Source/TailBlazor.csproj
@@ -29,6 +29,6 @@
         <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
     </ItemGroup>
     <Target Name="dll2bin" AfterTargets="AfterPublish" Condition="'$(Configuration)'=='Release'">
-        <Exec Command="pwsh .\dll2bin.ps1" />
+        <Exec Command="pwsh ./dll2bin.ps1" />
     </Target>
 </Project>
