--- a/Source/package.json
+++ b/Source/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tailblazor",
-  "version": "0.9.1",
+  "version": "0.10",
   "description": "template for using tailwind css in jit mode with blazor projects",
   "devDependencies": {
     "postcss-import": "^14.0.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.11",
+    "tailwindcss": "^3.1.2",
     "tailwindcss-debug-screens": "^2.2.0"
   },
   "scripts": {
@@ -20,8 +20,8 @@
   "author": "mcnerdius",
   "license": "0BSD",
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.5.0-alpha.3"
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
