--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,9 @@
     "editor.semanticHighlighting.enabled": true,
   },
   "omnisharp.enableEditorConfigSupport": true,
-  "omnisharp.enableImportCompletion": true,
   "omnisharp.enableRoslynAnalyzers": true,
   "csharp.semanticHighlighting.enabled": true,
   "csharp.suppressHiddenDiagnostics": false,
+  "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
+  "dotnet.defaultSolution": "Source\\TailBlazor.sln",
 }
