--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,7 @@
   "csharp.suppressHiddenDiagnostics": false,
   "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
   "dotnet.defaultSolution": "Source\\TailBlazor.sln",
+  "html.customData": [
+    "./node_modules/@shoelace-style/shoelace/dist/vscode.html-custom-data.json"
+  ]
 }
