--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@lit-labs/context": "^0.3.3",
-    "@lit-labs/router": "^0.1.1",
     "@tailwindcss/typography": "^0.5.9",
+    "@vaadin/router": "^1.7.5",
     "lit": "^2.7.5",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss-debug-screens": "^2.2.1"
